# motion-controller

./: .clang-format  .gitignore  CMakeLists.txt  README.md  always_on.py  main.py  motion_ctrl.py  record.py  requirements.txt  send.py  visualize.py
signal/: toggle.csv
src/: record.cpp  send.cpp
src/common/: gpio_pin.cpp  gpio_pwm.cpp  gpio_util.hpp  gpip_pin.cpp  gpip_pwm.cpp  gpip_util.cpp  gpip_util.hpp
